<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#9eca75">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_launcher"
            android:layout_marginRight="26dp"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/textView2"
            android:textColor="#ffffff"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nameLabel"
            android:id="@+id/textView"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginTop="25dp"
            android:textColor="#ffffff"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nameData"
            android:id="@+id/textView3"
            android:layout_alignBottom="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_marginLeft="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ageLabel"
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ageData"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/faveAppData"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/faveAppLabel"
            android:id="@+id/textView7"
            android:textColor="#ffffff"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"/>

    <Button android:id="@+id/launch_bartext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:text="Launch Bartext" />

</RelativeLayout>
